Update config JSON file & Footer text

--- a/src/partials/footer/footer.html
+++ b/src/partials/footer/footer.html
@@ -14,7 +14,7 @@
                 </ul>
             </div>
             <div class="d-flex align-items-center justify-content-end flex-column flex-lg-row">
-                <p class="small m-0 text-center text-lg-start">&copy; 2021 Outdoorly All Rights Reserved. Template by <a
+                <p class="small m-0 text-center text-lg-start">&copy; 2021 OldSkool All Rights Reserved. Template by <a
                         href="https://www.pixelrocket.store">Pixel Rocket</a></p>
                 <ul class="list-unstyled mb-0 ms-lg-4 mt-3 mt-lg-0 d-flex justify-content-end align-items-center">
                     <li class="bg-light p-2 d-flex align-items-center justify-content-center me-2">
