Add AOS scroll effects

--- a/src/assets/scss/libs.scss
+++ b/src/assets/scss/libs.scss
@@ -2,6 +2,8 @@
 * Note: Do not write any CSS in this file. Only use it to import vendor CSS files from your node_modules directory.
 */
 
+/* AOS */
+@import '~aos/dist/aos.css';
 
 /* NoUISlider */
 @import '~nouislider/distribute/nouislider.min.css';
