--- a/src/partials/product/product-info.html
+++ b/src/partials/product/product-info.html
@@ -1,4 +1,4 @@
-<div class="pb-3">
+<div class="pb-3" data-aos="fade-in">
     <div class="d-flex align-items-center mb-3">
         <p class="small fw-bolder text-uppercase tracking-wider text-muted m-0 me-4">KiiKii</p>
         <div class="d-flex justify-content-start align-items-center disable-child-pointer cursor-pointer"
