--- a/src/partials/swiper/swiper-instagram.html
+++ b/src/partials/swiper/swiper-instagram.html
@@ -1,6 +1,7 @@
 <!-- Swiper Instagram -->
 {{#if (config slideshow-instagram) }}
-<h3 class="title-small text-muted text-center mb-3 mt-5"><i class="ri-instagram-line align-bottom"></i>
+<div data-aos="fade-in">
+  <h3 class="title-small text-muted text-center mb-3 mt-5"><i class="ri-instagram-line align-bottom"></i>
     #OLDSKOOL
 </h3>
 <div class="overflow-hidden">
@@ -47,6 +48,7 @@
 
     </div>
   </div>
+</div>
 </div>
 <!-- /Swiper Instagram-->
 {{/if}}
