--- a/src/partials/product/product-gallery.html
+++ b/src/partials/product/product-gallery.html
@@ -1,4 +1,4 @@
-<div class="row g-3">
+<div class="row g-3" data-aos="fade-right">
     <div class="col-12">
         <picture>
             <img class="img-fluid" data-zoomable src="{{webRoot}}/assets/images/products/product-page-1.jpeg" alt="{{ config.defaultImgAlt }}">
