--- a/src/partials/header/navbar/menu.html
+++ b/src/partials/header/navbar/menu.html
@@ -87,6 +87,11 @@
           <li><a class="dropdown-item" href="{{webRoot}}/index.html">Homepage</a></li>
           <li><a class="dropdown-item" href="{{webRoot}}/category.html">Category</a></li>
           <li><a class="dropdown-item" href="{{webRoot}}/product.html">Product</a></li>
+          <li><a class="dropdown-item" href="{{webRoot}}/cart.html">Cart</a></li>
+          <li><a class="dropdown-item" href="{{webRoot}}/checkout.html">Checkout</a></li>
+          <li><a class="dropdown-item" href="{{webRoot}}/login.html">Login</a></li>
+          <li><a class="dropdown-item" href="{{webRoot}}/register.html">Register</a></li>
+          <li><a class="dropdown-item" href="{{webRoot}}/forgotten-password.html">Forgotten Password</a></li>
         </ul>
       </li>
   </ul>
