--- a/src/partials/header/navbar/navbar.html
+++ b/src/partials/header/navbar/navbar.html
@@ -45,7 +45,7 @@
 
                     <!-- Navbar Login-->
                     <li class="ms-1 d-none d-lg-inline-block">
-                        <a class="nav-link text-body" href="{{webRoot}}/auth-login.html">
+                        <a class="nav-link text-body" href="{{webRoot}}/login.html">
                             Account
                         </a>
                     </li>
