Tweak checkout buttons

--- a/src/partials/cart/cart-dropdown/cart-dropdown.html
+++ b/src/partials/cart/cart-dropdown/cart-dropdown.html
@@ -44,8 +44,8 @@
                 <p class="m-0 fs-5 fw-bold">$422.99</p>
             </div>
         </div>
-        <a href="{{webRoot}}/cart.html" class="btn btn-outline-dark w-100 text-center mt-4" role="button">View cart</a>
-        <a href="{{webRoot}}/checkout.html" class="btn btn-dark w-100 text-center mt-2" role="button">Proceed to checkout</a>
+        <a href="{{webRoot}}/cart.html" class="btn btn-outline-dark w-100 text-center mt-4" role="button">View Cart</a>
+        <a href="{{webRoot}}/checkout.html" class="btn btn-dark w-100 text-center mt-2" role="button">Proceed To Checkout</a>
     </div>
     <!-- / Cart Summary-->
   </div>
